<resources>
    <string name="app_name">Widgets</string>
    <string name="enroll_now">Register</string>
    <string name="Register" />
    <string name="register">Register</string>
    <string name="enter_name">Enter Name</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="c">C</string>
    <string name="output">output</string>
    <string name="input">...</string>
    <string name="clear">C</string>
    <string name="Power">^</string>
    <string name="percent">%</string>
    <string name="equal">=</string>
    <string name="_3">3</string>
    <string name="div">/</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="mul">*</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="min">-</string>
    <string name="x">x</string>
    <string name="_0">0</string>
    <string name="DOT">.</string>
    <string name="PLUS">+</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>